# transmirall-project

./: .gitignore  CMakeLists.txt  README.md
BoundaryConditions/: BCHandler.hpp  BCs.cpp
Util/: SpiritFunction.cpp  SpiritFunction.hpp
input/: config.in
src/: Poisson.cpp  Poisson.hpp  main.cpp
